deps/cystdf/stdf4_src/stdf4_io.h

typedef enum {
    STD_OK          = 0,
    INVAILD_STDF    = 1000,
    WRONG_VERSION   = 1001,
    OS_FAIL         = 1002,
    NO_MEMORY       = 1003,
    STD_EOF         = 1004,
    TERMINATE       = 1005
} STDERR;
typedef enum {
    GZ_compressed   = 0,
    BZ_compressed   = 1,
    NotCompressed   = 2
} stdf_format;
typedef struct _stdf_fops {
    int (*stdf_open)(void* stdf, void* filename);
    int (*stdf_read)(void* stdf, void* buf, int length);
    int (*stdf_skip)(void* stdf, int num);
    int (*stdf_close)(void* stdf);
} stdf_fops;
typedef struct _stdf_handler {
    void*           filepath;
    stdf_format     fmt;
    FILE*           orgF;
    gzFile          gzF;
    BZFILE*         bzF;
    stdf_fops*      fops;
} STDF;
extern STDERR stdf_open(STDF** sh, void* filename);
extern STDERR stdf_reopen(STDF* sh);
extern STDERR stdf_close(STDF* sh);