deps/cystdf/stdf4_src/stdf4_func.h

extern int needByteSwap;
void parse_record(void** pRec, uint16_t recHeader, const unsigned char* rawData, uint16_t binaryLen);
void free_record(uint16_t recHeader, void* record);