deps/cystdf/stdf4_src/stdf4_types.h


typedef enum {
	REC_TYP_INFO        = 0,   
	REC_TYP_PER_LOT     = 1,   
	REC_TYP_PER_WAFER   = 2,   
	REC_TYP_PER_PART    = 5,   
	REC_TYP_PER_TEST    = 10,  
	REC_TYP_PER_EXEC    = 15,  
	REC_TYP_PER_PROG    = 20,  
	REC_TYP_GENERIC     = 50,  
	REC_TYP_RESV_IMAGE  = 180, 
	REC_TYP_RESV_IG900  = 181, 
} REC_TYP;
typedef enum {
	REC_SUB_FAR   = 10, 
	REC_SUB_ATR   = 20, 
	REC_SUB_MIR   = 10, 
	REC_SUB_MRR   = 20, 
	REC_SUB_PCR   = 30, 
	REC_SUB_HBR   = 40, 
	REC_SUB_SBR   = 50, 
	REC_SUB_PMR   = 60, 
	REC_SUB_PGR   = 62, 
	REC_SUB_PLR   = 63, 
	REC_SUB_RDR   = 70, 
	REC_SUB_SDR   = 80, 
	REC_SUB_WIR   = 10, 
	REC_SUB_WRR   = 20, 
	REC_SUB_WCR   = 30, 
	REC_SUB_PIR   = 10, 
	REC_SUB_PRR   = 20, 
	REC_SUB_TSR   = 30, 
	REC_SUB_PTR   = 10, 
	REC_SUB_MPR   = 15, 
	REC_SUB_FTR   = 20, 
	REC_SUB_BPS   = 10, 
	REC_SUB_EPS   = 20, 
	REC_SUB_GDR   = 10, 
	REC_SUB_DTR   = 30, 
} REC_SUB;
#define REC_FAR (REC_TYP_INFO      <<8 | REC_SUB_FAR)    
#define REC_ATR (REC_TYP_INFO      <<8 | REC_SUB_ATR)    
#define REC_MIR (REC_TYP_PER_LOT   <<8 | REC_SUB_MIR)    
#define REC_MRR (REC_TYP_PER_LOT   <<8 | REC_SUB_MRR)    
#define REC_PCR (REC_TYP_PER_LOT   <<8 | REC_SUB_PCR)    
#define REC_HBR (REC_TYP_PER_LOT   <<8 | REC_SUB_HBR)    
#define REC_SBR (REC_TYP_PER_LOT   <<8 | REC_SUB_SBR)    
#define REC_PMR (REC_TYP_PER_LOT   <<8 | REC_SUB_PMR)    
#define REC_PGR (REC_TYP_PER_LOT   <<8 | REC_SUB_PGR)    
#define REC_PLR (REC_TYP_PER_LOT   <<8 | REC_SUB_PLR)    
#define REC_RDR (REC_TYP_PER_LOT   <<8 | REC_SUB_RDR)    
#define REC_SDR (REC_TYP_PER_LOT   <<8 | REC_SUB_SDR)    
#define REC_WIR (REC_TYP_PER_WAFER <<8 | REC_SUB_WIR)    
#define REC_WRR (REC_TYP_PER_WAFER <<8 | REC_SUB_WRR)    
#define REC_WCR (REC_TYP_PER_WAFER <<8 | REC_SUB_WCR)    
#define REC_PIR (REC_TYP_PER_PART  <<8 | REC_SUB_PIR)    
#define REC_PRR (REC_TYP_PER_PART  <<8 | REC_SUB_PRR)    
#define REC_TSR (REC_TYP_PER_TEST  <<8 | REC_SUB_TSR)    
#define REC_PTR (REC_TYP_PER_EXEC  <<8 | REC_SUB_PTR)    
#define REC_MPR (REC_TYP_PER_EXEC  <<8 | REC_SUB_MPR)    
#define REC_FTR (REC_TYP_PER_EXEC  <<8 | REC_SUB_FTR)    
#define REC_BPS (REC_TYP_PER_PROG  <<8 | REC_SUB_BPS)    
#define REC_EPS (REC_TYP_PER_PROG  <<8 | REC_SUB_EPS)    
#define REC_GDR (REC_TYP_GENERIC   <<8 | REC_SUB_GDR)    
#define REC_DTR (REC_TYP_GENERIC   <<8 | REC_SUB_DTR)    
typedef	unsigned char	B1;
typedef	char			C1;
typedef	uint8_t			U1;
typedef	uint16_t		U2;
typedef	uint32_t		U4;
typedef	int8_t			I1;
typedef	int16_t			I2;
typedef	int32_t			I4;
typedef	float			R4;
typedef	double			R8;
typedef char*           Cn;
typedef U1              Bn[255U];
typedef U1              Dn[8192U];
typedef	Cn*				kxCn;
typedef	U1*				kxU1;
typedef	U2*				kxU2;
typedef	R4*				kxR4;
typedef	U1*				kxN1;
typedef enum {
	GDR_B0				= 0,
	GDR_U1				= 1,
	GDR_U2				= 2,
	GDR_U4				= 3,
	GDR_I1				= 4,
	GDR_I2				= 5,
	GDR_I4				= 6,
	GDR_R4				= 7,
	GDR_R8				= 8,
	GDR_Cn				= 10,
	GDR_Bn				= 11,
	GDR_Dn				= 12,
	GDR_N1				= 13
} V1_type;
typedef struct {
	V1_type		type;
	void*		data;
} V1;
typedef	V1*			Vn;
typedef struct _FAR {
    U1   CPU_TYPE;  
    U1   STDF_VER;  
} _FAR;
typedef struct ATR {
    U4   MOD_TIM ; 
    Cn   CMD_LINE; 
} ATR;
typedef struct MIR {
    U4  SETUP_T  ; 
    U4  START_T  ; 
    U1  STAT_NUM ; 
    C1  MODE_COD ; 
    C1  RTST_COD ; 
    C1  PROT_COD ; 
    U2  BURN_TIM ; 
    C1  CMOD_COD ; 
    Cn  LOT_ID   ; 
    Cn  PART_TYP ; 
    Cn  NODE_NAM ; 
    Cn  TSTR_TYP ; 
    Cn  JOB_NAM  ; 
    Cn  JOB_REV  ; 
    Cn  SBLOT_ID ; 
    Cn  OPER_NAM ; 
    Cn  EXEC_TYP ; 
    Cn  EXEC_VER ; 
    Cn  TEST_COD ; 
    Cn  TST_TEMP ; 
    Cn  USER_TXT ; 
    Cn  AUX_FILE ; 
    Cn  PKG_TYP  ; 
    Cn  FAMLY_ID ; 
    Cn  DATE_COD ; 
    Cn  FACIL_ID ; 
    Cn  FLOOR_ID ; 
    Cn  PROC_ID  ; 
    Cn  OPER_FRQ ; 
    Cn  SPEC_NAM ; 
    Cn  SPEC_VER ; 
    Cn  FLOW_ID  ; 
    Cn  SETUP_ID ; 
    Cn  DSGN_REV ; 
    Cn  ENG_ID   ; 
    Cn  ROM_COD  ; 
    Cn  SERL_NUM ; 
    Cn  SUPR_NAM ; 
} MIR;
typedef struct MRR {
    U4  FINISH_T ; 
    C1  DISP_COD ; 
    Cn  USR_DESC ; 
    Cn  EXC_DESC ; 
} MRR;
typedef struct PCR {
    U1  HEAD_NUM ; 
    U1  SITE_NUM ; 
    U4  PART_CNT ; 
    U4  RTST_CNT ; 
    U4  ABRT_CNT ; 
    U4  GOOD_CNT ; 
    U4  FUNC_CNT ; 
} PCR;
typedef struct HBR {
    U1  HEAD_NUM ; 
    U1  SITE_NUM ; 
    U2  HBIN_NUM ; 
    U4  HBIN_CNT ; 
    C1  HBIN_PF  ; 
    Cn  HBIN_NAM ; 
} HBR;
typedef struct SBR {
    U1  HEAD_NUM ; 
    U1  SITE_NUM ; 
    U2  SBIN_NUM ; 
    U4  SBIN_CNT ; 
    C1  SBIN_PF  ; 
    Cn  SBIN_NAM ; 
} SBR;
typedef struct PMR {
    U2  PMR_INDX ; 
    U2  CHAN_TYP ; 
    Cn  CHAN_NAM ; 
    Cn  PHY_NAM  ; 
    Cn  LOG_NAM  ; 
    U1  HEAD_NUM ; 
    U1  SITE_NUM ; 
} PMR;
typedef struct PGR {
    U2      GRP_INDX ; 
    Cn      GRP_NAM  ; 
    U2      INDX_CNT ; 
    kxU2    PMR_INDX ; 
} PGR;
typedef struct PLR {
    U2      GRP_CNT  ; 
    kxU2    GRP_INDX ; 
    kxU2    GRP_MODE ; 
    kxU1    GRP_RADX ; 
    kxCn    PGM_CHAR ; 
    kxCn    RTN_CHAR ; 
    kxCn    PGM_CHAL ; 
    kxCn    RTN_CHAL ; 
} PLR;
typedef struct RDR {
    U2    NUM_BINS ; 
    kxU2 RTST_BIN ; 
} RDR;
typedef struct SDR {
    U1    HEAD_NUM ; 
    U1    SITE_GRP ; 
    U1    SITE_CNT ; 
    kxU1  SITE_NUM ; 
    Cn    HAND_TYP ; 
    Cn    HAND_ID  ; 
    Cn    CARD_TYP ; 
    Cn    CARD_ID  ; 
    Cn    LOAD_TYP ; 
    Cn    LOAD_ID  ; 
    Cn    DIB_TYP  ; 
    Cn    DIB_ID   ; 
    Cn    CABL_TYP ; 
    Cn    CABL_ID  ; 
    Cn    CONT_TYP ; 
    Cn    CONT_ID  ; 
    Cn    LASR_TYP ; 
    Cn    LASR_ID  ; 
    Cn    EXTR_TYP ; 
    Cn    EXTR_ID  ; 
} SDR;
typedef struct WIR {
    U1  HEAD_NUM ; 
    U1  SITE_GRP ; 
    U4  START_T  ; 
    Cn  WAFER_ID ; 
} WIR;
typedef struct WRR {
    U1  HEAD_NUM ; 
    U1  SITE_GRP ; 
    U4  FINISH_T ; 
    U4  PART_CNT ; 
    U4  RTST_CNT ; 
    U4  ABRT_CNT ; 
    U4  GOOD_CNT ; 
    U4  FUNC_CNT ; 
    Cn  WAFER_ID ; 
    Cn  FABWF_ID ; 
    Cn  FRAME_ID ; 
    Cn  MASK_ID  ; 
    Cn  USR_DESC ; 
    Cn  EXC_DESC ; 
} WRR;
typedef struct WCR {
    R4  WAFR_SIZ ; 
    R4  DIE_HT   ; 
    R4  DIE_WID  ; 
    U1  WF_UNITS ; 
    C1  WF_FLAT  ; 
    I2  CENTER_X ; 
    I2  CENTER_Y ; 
    C1  POS_X    ; 
    C1  POS_Y    ; 
} WCR;
typedef struct PIR {
    U1  HEAD_NUM ; 
    U1  SITE_NUM ; 
} PIR;
typedef struct PRR {
    U1  HEAD_NUM ; 
    U1  SITE_NUM ; 
    B1  PART_FLG ; 
    U2  NUM_TEST ; 
    U2  HARD_BIN ; 
    U2  SOFT_BIN ; 
    I2  X_COORD  ; 
    I2  Y_COORD  ; 
    U4  TEST_T   ; 
    Cn  PART_ID  ; 
    Cn  PART_TXT ; 
    Bn  PART_FIX ; 
} PRR;
typedef struct TSR {
    U1  HEAD_NUM ; 
    U1  SITE_NUM ; 
    C1  TEST_TYP ; 
    U4  TEST_NUM ; 
    U4  EXEC_CNT ; 
    U4  FAIL_CNT ; 
    U4  ALRM_CNT ; 
    Cn  TEST_NAM ; 
    Cn  SEQ_NAME ; 
    Cn  TEST_LBL ; 
    B1  OPT_FLAG ; 
    R4  TEST_TIM ; 
    R4  TEST_MIN ; 
    R4  TEST_MAX ; 
    R4  TST_SUMS ; 
    R4  TST_SQRS ; 
} TSR;
typedef struct PTR {
    U4  TEST_NUM ; 
    U1  HEAD_NUM ; 
    U1  SITE_NUM ; 
    B1  TEST_FLG ; 
    B1  PARM_FLG ; 
    R4  RESULT   ; 
    Cn  TEST_TXT ; 
    Cn  ALARM_ID ; 
    B1  OPT_FLAG ; 
    I1  RES_SCAL ; 
    I1  LLM_SCAL ; 
    I1  HLM_SCAL ; 
    R4  LO_LIMIT ; 
    R4  HI_LIMIT ; 
    Cn  UNITS    ; 
    Cn  C_RESFMT ; 
    Cn  C_LLMFMT ; 
    Cn  C_HLMFMT ; 
    R4  LO_SPEC  ; 
    R4  HI_SPEC  ; 
} PTR;
typedef struct MPR {
    U4    TEST_NUM ; 
    U1    HEAD_NUM ; 
    U1    SITE_NUM ; 
    B1    TEST_FLG ; 
    B1    PARM_FLG ; 
    U2    RTN_ICNT ; 
    U2    RSLT_CNT ; 
    kxN1   RTN_STAT ; 
    kxR4   RTN_RSLT ; 
    Cn    TEST_TXT ; 
    Cn    ALARM_ID ; 
    B1    OPT_FLAG ; 
    I1    RES_SCAL ; 
    I1    LLM_SCAL ; 
    I1    HLM_SCAL ; 
    R4    LO_LIMIT ; 
    R4    HI_LIMIT ; 
    R4    START_IN ; 
    R4    INCR_IN  ; 
    kxU2   RTN_INDX ; 
    Cn    UNITS    ; 
    Cn    UNITS_IN ; 
    Cn    C_RESFMT ; 
    Cn    C_LLMFMT ; 
    Cn    C_HLMFMT ; 
    R4    LO_SPEC  ; 
    R4    HI_SPEC  ; 
} MPR;
typedef struct FTR {
    U4      TEST_NUM ; 
    U1      HEAD_NUM ; 
    U1      SITE_NUM ; 
    B1      TEST_FLG ; 
    B1      OPT_FLAG ; 
    U4      CYCL_CNT ; 
    U4      REL_VADR ; 
    U4      REPT_CNT ; 
    U4      NUM_FAIL ; 
    I4      XFAIL_AD ; 
    I4      YFAIL_AD ; 
    I2      VECT_OFF ; 
    U2      RTN_ICNT ; 
    U2      PGM_ICNT ; 
    kxU2    RTN_INDX ; 
    kxN1    RTN_STAT ; 
    kxU2    PGM_INDX ; 
    kxN1    PGM_STAT ; 
    Dn      FAIL_PIN ; 
    Cn      VECT_NAM ; 
    Cn      TIME_SET ; 
    Cn      OP_CODE  ; 
    Cn      TEST_TXT ; 
    Cn      ALARM_ID ; 
    Cn      PROG_TXT ; 
    Cn      RSLT_TXT ; 
    U1      PATG_NUM ; 
    Dn      SPIN_MAP ; 
} FTR;
typedef struct BPS {
    Cn  SEQ_NAME ; 
} BPS;
typedef struct EPS {} EPS;
typedef struct GDR {
    U2  FLD_CNT  ; 
    Vn  GEN_DATA ; 
} GDR;
typedef struct DTR {
    Cn  TEXT_DAT ; 
} DTR;